classDiagram
    class IPlcClient {
        <<interface>>
        +IsConnected bool
        +ConnectAsync() Task
        +DisconnectAsync() Task
        +ReadBitAsync(string) Task~bool~
        +ReadWordAsync(string) Task~short~
        +ReadDWordAsync(string) Task~int~
        +WriteBitAsync(string, bool) Task
        +WriteWordAsync(string, short) Task
        +WriteDWordAsync(string, int) Task
    }
    class IPlcBatchReader {
        <<interface>>
        +ReadBitsAsync(string, int) Task~bool[]~
        +ReadWordsAsync(string, int) Task~short[]~
    }
    class IPlcAddressParser {
        <<interface>>
        +Parse(string) PlcAddress
        +Format(PlcAddress) string
    }
    class PlcAddress {
        +string Device
        +int Number
        +PlcDataType DataType
    }
    class PlcDataType {
        <<enumeration>>
        Bit
        Word
        DWord
        Float
        String
    }
    IPlcClient <|-- IPlcBatchReader
    IPlcClient --> IPlcAddressParser
    IPlcAddressParser --> PlcAddress
    PlcAddress --> PlcDataType